Summary of Changes to DuroDBMS

DuroDBMS 1.0

- Made datetime type ordered.

- Fixed bug in RDB_drop_table_index().

DuroDBMS 0.26

- Duro D/T: Replaced MODULE by PACKAGE.

- Duro D/T: It is now possible to omit the package name when calling a
  user-defined update operator from another operator that belongs to the same
  package.

- Duro D/T: Updating tuples using t.attr := v is now supported in addition to
  UPDATE t { attr := v }.

- Duro D/T: Added D_INSERT and I_DELETE. RDB_ma_insert and RDB_ma_vdelete
  now contain a flags field which must be initialized when a pointer
  to the respective structure is passed to RDB_multi_assign().

- Duro D/T: Tuple attributes are now allowed as a target in INSERT, D_INSERT,
  DELETE, I_DELETE, and LOAD.

- form_to_tuple() is now in package net.

- If the evaluation of an expression fails Duro D/T no longer retries with
  a transaction to read operators from the catalog.
  Replaced Duro_evaluate_retry() and  Duro_expr_type_retry() by Duro_evaluate()
  and Duro_expr_type().

- Added function Duro_evaluate() which does not start a transaction.

- Changed RDB_add_table() which now takes an optional RDB_database argument.
  Added a db argument to duro::table add.

- Database environments are by default opened with the DB_CREATE flag.

- Dropped RDB_get_update_op_e(). RDB_get_update_op() now has the same signature
  as RDB_get_update_op_e() previously had.

- RDB_rollback_all() is available in rdb.h.

- Added arguments getfnp and getarg to RDB_extend_tuple() for retrieving
  variables.

- Added type datetime.

- Creation time of user-defined operators is stored in the catalog.

- Renamed catalog attributes: name in sys_upd_ops and sys_ro_ops is now opname,
  name in sys_indexes is now idxname.

- Fixed a bug in the handling of string literals in user-defined operators.

- Generic tuple types now allowed in operator parameters.

- Replaced fatal_error by data_corruption_error and run_recovery_error.
